// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jh/lib/logger/hello logHello when on dot_com console logs a friendly hello message including the careers page 1`] = `
[
  [
    "%cWelcome to GitLab!%c

Does this page need fixes or improvements? Open an issue or contribute a merge request to help make GitLab more lovable. At GitLab, everyone can contribute!

🤝 Contribute to GitLab: https://about.gitlab.cn/community/contribute/
🔎 Create a new GitLab issue: https://jihulab.com/gitlab-cn/gitlab/-/issues/new
🚀 We like your curiosity! Help us improve GitLab by joining the team: https://about.gitlab.cn/jobs/",
    "padding-top: 0.5em; font-size: 2em;",
    "padding-bottom: 0.5em;",
  ],
]
`;

exports[`jh/lib/logger/hello logHello when on self managed console logs a friendly hello message without including the careers page 1`] = `
[
  [
    "%cWelcome to GitLab!%c

Does this page need fixes or improvements? Open an issue or contribute a merge request to help make GitLab more lovable. At GitLab, everyone can contribute!

🤝 Contribute to GitLab: https://about.gitlab.cn/community/contribute/
🔎 Create a new GitLab issue: https://jihulab.com/gitlab-cn/gitlab/-/issues/new
",
    "padding-top: 0.5em; font-size: 2em;",
    "padding-bottom: 0.5em;",
  ],
]
`;
